--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>New Title</title>
 </head>
 <body>
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod quo qui at quia eligendi consequuntur tempore earum! Alias blanditiis, velit corrupti eum architecto, vitae est possimus sequi eos, reiciendis mollitia?
