added content to about

--- a/about.html
+++ b/about.html
@@ -6,6 +6,38 @@
     <title>Document</title>
 </head>
 <body>
-    
+    Three little maids from school are we
+Pert as a school-girl well can be
+Filled to the brim with girlish glee
+Three little maids from school
+
+Everything is a source of fun
+Nobody's safe, for we care for none
+Life is a joke that's just begun
+Three little maids from school 
+
+Three little maids who, all unwary
+Come from a ladies' seminary
+Freed from its genius tutelary
+Three little maids from school
+Three little maids from school
+
+One little maid is a bride, Yum-Yum
+Two little maids in attendance come
+Three little maids is the total sum
+Three little maids from school
+Three little maids from school
+
+From three little maids take one away
+Two little maids remain, and they
+Won't have to wait very long, they say
+Three little maids from school
+Three little maids from school
+
+Three little maids who, all unwary
+Come from a ladies' seminary
+Freed from its genius tutelary
+Three little maids from school
+Three little maids from school
 </body>
 </html>
