added about link

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>New Title</title>
 </head>
 <body>
+    <a href="/about.html">About</a>
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod quo qui at quia eligendi consequuntur tempore earum! Alias blanditiis, velit corrupti eum architecto, vitae est possimus sequi eos, reiciendis mollitia?
 </body>
 </html>
