--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <title>About the developer</title>
 </head>
 <body>
+    <a href="/index.html">Home</a>
     Three little maids from school are we
 Pert as a school-girl well can be
 Filled to the brim with girlish glee
